--- a/Pages/series.html
+++ b/Pages/series.html
@@ -42,57 +42,131 @@
       <h2>Series</h2>
       <div class="row">
         <div class="col-1 card">
-          <img src="\Images\Series\1899.jpg" alt="1899" />
+          <a href="Description.html">
+            <img src="  " id="seriesposter0" />
+          </a>
           <div class="overlay">
-            <div class="text">1899</div>
+            <div class="text" id="seriesname0"></div>
           </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Series\Dark.jpg" alt="dark" />
+          <a href="Description.html">
+            <img src="  " id="seriesposter1" />
+          </a>
           <div class="overlay">
-            <div class="text">Dark</div>
+            <div class="text" id="seriesname1"></div>
           </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Series\Gameofthrones.jpg" alt="Avengers" />
+          <a href="Description.html">
+            <img src="  " id="seriesposter2" />
+          </a>
           <div class="overlay">
-            <div class="text">Game Of Thrones</div>
+            <div class="text" id="seriesname2"></div>
           </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Series\perakyblinder.jpg" alt="peakyblinders" />
+          <a href="Description.html">
+            <img src="  " id="seriesposter3" />
+          </a>
           <div class="overlay">
-            <div class="text">Peaky Blinders</div>
+            <div class="text" id="seriesname3"></div>
           </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Series\StrangerThings.jpg" alt="StrangerThings" />
+          <a href="Description.html">
+            <img src="  " id="seriesposter4" />
+          </a>
           <div class="overlay">
-            <div class="text">Stranger Things</div>
+            <div class="text" id="seriesname4"></div>
           </div>
         </div>
         <div class="col-1 card">
-          <img
-            src="\Images\Series\thevampirediaries.jpg"
-            alt="thevampirediaries"
-          />
+          <a href="Description.html">
+            <img src="  " id="seriesposter5" />
+          </a>
           <div class="overlay">
-            <div class="text">The Vampire Diaries</div>
+            <div class="text" id="seriesname5"></div>
           </div>
         </div>
         <div class="col-1 card">
-          <img src="\Images\Series\wednesday.jpg" alt="Wednesday" />
+          <a href="Description.html">
+            <img src="  " id="seriesposter6" />
+          </a>
           <div class="overlay">
-            <div class="text">Wednesday</div>
+            <div class="text" id="seriesname6"></div>
           </div>
         </div>
         <div class="col-1 card">
-          <img
-            src="\Images\Series\desperate housewives.jpg"
-            alt="desperatehousewives"
-          />
+          <a href="Description.html">
+            <img src="  " id="seriesposter7" />
+          </a>
           <div class="overlay">
-            <div class="text">Desperate Housewives</div>
+            <div class="text" id="seriesname7"></div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <a href="Description.html">
+            <img src="  " id="seriesposter8" />
+          </a>
+          <div class="overlay">
+            <div class="text" id="seriesname8"></div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <a href="Description.html">
+            <img src="  " id="seriesposter9" />
+          </a>
+          <div class="overlay">
+            <div class="text" id="seriesname9"></div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <a href="Description.html">
+            <img src="  " id="seriesposter10" />
+          </a>
+          <div class="overlay">
+            <div class="text" id="seriesname10"></div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <a href="Description.html">
+            <img src="  " id="seriesposter11" />
+          </a>
+          <div class="overlay">
+            <div class="text" id="seriesname11"></div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <a href="Description.html">
+            <img src="  " id="seriesposter12" />
+          </a>
+          <div class="overlay">
+            <div class="text" id="seriesname12"></div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <a href="Description.html">
+            <img src="  " id="seriesposter13" />
+          </a>
+          <div class="overlay">
+            <div class="text" id="seriesname13"></div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <a href="Description.html">
+            <img src="  " id="seriesposter14" />
+          </a>
+          <div class="overlay">
+            <div class="text" id="seriesname14"></div>
+          </div>
+        </div>
+        <div class="col-1 card">
+          <a href="Description.html">
+            <img src="  " id="seriesposter15" />
+          </a>
+          <div class="overlay">
+            <div class="text" id="seriesname15"></div>
           </div>
         </div>
       </div>
@@ -100,5 +174,6 @@
     <footer>
       <p>&copy; 2024 Film Fusion. All rights reserved.</p>
     </footer>
+    <script src="/JS\Series.js"></script>
   </body>
 </html>
