--- a/Home.html
+++ b/Home.html
@@ -17,12 +17,12 @@
         </div>
         <ul class="nav-links">
           <li></li>
-          <li><a href="movies.html">Movies</a></li>
-          <li><a href="series.html">Series</a></li>
-          <li><a href="About-us.html">About Us</a></li>
+          <li><a href="/Pages/movies.html">Movies</a></li>
+          <li><a href="/Pages/series.html">Series</a></li>
+          <li><a href="/Pages/About-us.html">About Us</a></li>
         </ul>
         <div class="profile-icon">
-          <a href="Sign-up.html">
+          <a href="/Pages/Sign-up.html">
             <img
               src="/Images/PersonCircle-removebg-preview.png"
               alt="Profile Icon"
@@ -32,36 +32,7 @@
       </nav>
     </header>
     <main>
-      <div class="slideshow-container">
-        <div class="mySlides fade">
-          <img src="/Images/Slideshow/Slideshow (1).png" style="width: 100%" />
-        </div>
-
-        <div class="mySlides fade">
-          <img src="/Images/Slideshow/Slideshow (2).png" style="width: 100%" />
-        </div>
-
-        <div class="mySlides fade">
-          <img src="/Images/Slideshow/Slideshow (3).png" style="width: 100%" />
-        </div>
-        <div class="mySlides fade">
-          <img src="/Images/Slideshow/Slideshow (4).png" style="width: 100%" />
-        </div>
-        <div class="mySlides fade">
-          <img src="/Images/Slideshow/Slideshow (5).png" style="width: 100%" />
-        </div>
-        <div class="mySlides fade">
-          <img src="/Images/Slideshow/Slideshow (6).png" style="width: 100%" />
-        </div>
-        <div class="mySlides fade">
-          <img src="/Images/Slideshow/Slideshow (7).png" style="width: 100%" />
-        </div>
-        <div class="mySlides fade">
-          <img src="/Images/Slideshow/Slideshow (8).png" style="width: 100%" />
-        </div>
-      </div>
-      <br />
-
+      <div class="slideshow-container" id="Slideshow"></div>
       <section id="recommendations">
         <h2>Recommendations</h2>
         <div class="row">
@@ -69,13 +40,13 @@
         </div>
       </section>
       <section id="movies">
-        <h2>Movies</h2>
+        <a href="movies.html"><h2>Movies</h2></a>
         <div class="row">
           <!-- Movie Cards will be dynamically generated here -->
         </div>
       </section>
       <section id="series">
-        <h2>Series</h2>
+        <a href="series.html"> <h2>Series</h2></a>
         <div class="row">
           <!-- Series Cards will be dynamically generated here -->
         </div>
