--- a/Pages/Sign-in.html
+++ b/Pages/Sign-in.html
@@ -93,7 +93,7 @@
     <header>
       <nav>
         <div class="logo">
-          <a href="home.html">
+          <a href="/home.html">
             <img
               src="/Images/Logo.png"
               alt="Film Fusion Logo"
