--- a/Pages/Sign-up.html
+++ b/Pages/Sign-up.html
@@ -115,7 +115,7 @@ footer p {
     <header>
       <nav>
         <div class="logo">
-          <a href="home.html">
+          <a href="/home.html">
             <img src="/Images/Logo.png" alt="Film Fusion Logo" width="170" height="80"/>
           </a>
         </div>
