--- a/Pages/Description.html
+++ b/Pages/Description.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
           <div class="logo">
-            <a href="home.html">
+            <a href="/home.html">
                 <img src="/Images/Logo.png" alt="Film Fusion Logo" width="170" height="80"/>
             </a>
           </div>
@@ -21,9 +21,11 @@
             <li><a href="series.html">Series</a></li>
             <li><a href="About-us.html">About Us</a></li>
           </ul>
-          <div class="profile-icon">
-            <img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" />
-          </div>
+           <a href="/Pages/Sign-up.html">
+            <img
+              src="/Images/PersonCircle-removebg-preview.png"
+              alt="Profile Icon"
+            />
         </nav>
       </header>
       <main>
