--- a/Pages/series.html
+++ b/Pages/series.html
@@ -11,7 +11,7 @@
     <header>
       <nav>
         <div class="logo">
-          <a href="Home.html">
+          <a href="/Home.html">
             <img
               src="/Images/Logo.png"
               alt="Film Fusion Logo"
