--- a/Pages/Description.html
+++ b/Pages/Description.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Film Fusion - Series</title>
     <link rel="stylesheet" href="/CSS/Description.css" />
-    <link rel="icon" href="/Images/Logo2.png" type="image/x-icon" />
 </head>
 <body>
     <header>
         <nav>
           <div class="logo">
-            <a href="/home.html">
+            <a href="home.html">
                 <img src="/Images/Logo.png" alt="Film Fusion Logo" width="170" height="80"/>
             </a>
           </div>
@@ -21,32 +20,35 @@
             <li><a href="series.html">Series</a></li>
             <li><a href="About-us.html">About Us</a></li>
           </ul>
-           <a href="/Pages/Sign-up.html">
-            <img
-              src="/Images/PersonCircle-removebg-preview.png"
-              alt="Profile Icon"
-            />
-            </a>
+          <div class="profile-icon">
+            <img src="/Images/PersonCircle-removebg-preview.png" alt="Profile Icon" />
+          </div>
         </nav>
       </header>
       <main>
+       <section class="Movie-Name" id="MovieName">
+        <div class = "desciption">
         <h1>Ant Man</h1>
         <li class="item-container">
-          <img src="/Images/Movies/ant_man.jpg" alt="Ant man poster" width="400" height="600">
-          <iframe width="1100" height="600" src="https://www.youtube-nocookie.com/embed/pWdKf3MneyI?si=6BGKBJjBoXIEbbJE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <img src="/Images/Movies/ant_man.jpg" alt="Ant man poster" width="400" height="600" Id="MoviePoster">
+          <iframe width="1100" height="600" src="https://www.youtube-nocookie.com/embed/pWdKf3MneyI?si=6BGKBJjBoXIEbbJE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" id="MovieTrailer" allowfullscreen></iframe>
         </li>
-        <div class="button-container">
+        <div class="button-container" id="Genre">
           <button class="button">Action</button>
           <button class="button">Comedy</button>
           <button class="button">Sci-Fi</button>
         </div>
+       <section class="description" id="MovieDescription">
         <p>Armed with a super-suit with the astonishing ability to shrink in scale but increase in strength, cat burglar Scott Lang must embrace his inner hero and help his mentor, Dr. Hank Pym, pull off a plan that will save the world. Follow the extraordinary journey of Scott Lang, a skilled thief turned reluctant hero...</p>
-        <section class="Type">
-        <h3>Director</h3>
+
+       </section>
+       <h3>Director</h3>
+        <section class="director" id="DirectorsName">
         <p>Payton Reed</p>
         </section>
         <h3>Top Cast</h3>
-        <section class="TopCast"> <div class="serv">
+        <section class="TopCast" id="TopCast"> 
+          <div class="serv">
           <div class="team">
             <img src="/Images/Movies/Paul Rudd.jpg" alt="Paul Rudd" />
           </div>
@@ -59,8 +61,6 @@
             <img src="/Images/Movies/MV5BZmRhZWVjZWMtMzUwZi00OTI3LThiMzAtY2VmMjU5YjQ0YjVjXkEyXkFqcGdeQXVyODMzMTM1MDc@._V1_.jpg" alt="Hayley Atwell" />
           </div>
           <h4> Hayley Atwell </h4>
-         
-          
         </div>
         <div class="serv">
           <div class="team">
@@ -68,11 +68,16 @@
           </div>
           <h4>Anthony Mackie</h4>
           </section>
-        <section class="Type">
         <h3>Release Date</h3>
-        <p>July 17, 2015</p>
+        <section class="Release-date" id="ReleaseDate">
+          <p>July 17, 2015</p>
+        </section>
         <h3>IMDb Rating</h3>
-        <p>7.3/10</p>
-      </section>
+        <section class="rating" id="Rating">
+          <p>7.3/10</p>
+        </section>
+      </div>
+    </section> 
       </main>
+      <script src="/JS/MoviesAPI.js"> </script>
 </body>
